# epuboverlay

./: .gitignore  README.md  pyproject.toml  test_input.epub  test_output.epub
.agents/skills/notebook_context/references/: Development Strategy.md  Lightweight TTS Models: Advanced Options.md
epub2lrc/: __init__.py
epuboverlay/: __init__.py  __main__.py  cli.py  extract.py  normalization.py  pipeline.py  progress.py
epuboverlay/preprocessors/: __init__.py  base.py  docx.py  epub.py  markdown.py  pdf.py  txt.py
epuboverlay/synthesizers/: __init__.py  base.py  dummy.py  f5tts.py  kokoro.py  pocket.py
epuboverlay/web/: __init__.py  jobs.py  server.py
epuboverlay/web/static/: app.js  index.html  style.css
epuboverlay/web/static/js/: api.js  app.js  jobs.js  kokoro.js  modal.js  playground.js  pocket.js  settings.js  stats.js  utils.js
tests/: test_extract.py  test_normalization.py  test_pipeline.py  test_preprocessors.py
