[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "epuboverlay"
version = "0.1.0"
description = "Generate standard narrated EPUB 3 files with Media Overlays using F5-TTS."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi>=0.100",
    "uvicorn>=0.20",
]

[project.scripts]
epuboverlay = "epuboverlay.cli:main"
epuboverlay-web = "epuboverlay.web.server:main"
