[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "epuboverlay"
version = "0.11.0"
description = "Generate standard narrated EPUB 3 files with Media Overlays using F5-TTS, Kokoro-82M, and Pocket-TTS, and extract audio & subtitles."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "psutil>=5.9.0",
    "python-multipart>=0.0.6",
    "scipy>=1.10.0",
    "f5-tts>=1.1.0",
    "kokoro>=0.7.16",
    "pocket-tts>=0.1.0",
]

[project.optional-dependencies]
docx = ["python-docx"]
pdf = ["pypdf"]
all = [
    "python-docx",
    "pypdf",
]

[project.scripts]
epuboverlay = "epuboverlay.cli:main"
epuboverlay-web = "epuboverlay.web.server:main"
